--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Juhlaboxi</title>
+<title>juhlaboxi</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -60,7 +60,7 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
+    <a href="#home" class="w3-bar-item w3-button">juhlaboxi</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TILAA</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
@@ -83,7 +83,7 @@ body, html {
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">juhlaboxi <span class="w3-hide-small"> </span> </span>
 	<br \>
-	<span class="w3-center w3-padding-small w3-gray w3-large w3-narrow w3-animate-opacity">kun haluat vain hyvää juhlatunnelmaa. Ilman sähläystä. (etc) <span class="w3-hide-small"> </span> </span>
+	<span class="w3-center w3-padding-small w3-gray w3-large w3-narrow w3-animate-opacity">kun haluat vain hyvää juhlatunnelmaa. <span class="w3-hide-large"><br \></span>Ilman sähläystä.</span>
   </div>
 </div>
 
