made some text black

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body, html {
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">TILAA</span>
+    <span class="w3-xxlarge w3-text-black w3-wide">TILAA</span>
   </div>
 </div>
 
@@ -204,7 +204,7 @@ body, html {
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">haluatko ottaa yhteyttä?</span>
+     <span class="w3-xxlarge w3-text-black w3-wide">haluatko ottaa yhteyttä?</span>
   </div>
 </div>
 
