--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body, html {
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">juhlaboxi <span class="w3-hide-small"> </span> </span>
 	<br \>
-	<span class="w3-center w3-padding-small w3-gray w3-large w3-narrow w3-animate-opacity">kun haluat vain hyvää juhlatunnelmaa. <span class="w3-hide-large"><br \></span>Ilman sähläystä.</span>
+	<span class="w3-center w3-padding-small w3-black w3-large w3-narrow w3-animate-opacity">kun haluat vain hyvää juhlatunnelmaa. <span class="w3-hide-large"><br \></span>Ilman sähläystä.</span>
   </div>
 </div>
 
