--- a/tilaa.html
+++ b/tilaa.html
@@ -6,11 +6,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="accordion.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
   height: 100%;
-  color: #00000;
+  color: white;
+  background: black;
   line-height: 1.8;
 }
 
@@ -30,7 +32,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
+  background-image: url("xmas.jpeg");
   min-height: 400px;
 }
 
@@ -71,22 +73,22 @@ body, html {
 }
 </style>
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
+<div class="w3-top w3-black w3-text-green">
   <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+    <a class="w3-bar-item w3-button w3-hover-white w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="https://juhlaboxi.github.io#home" class="w3-bar-item w3-button">juhlaboxi</a>
-    <a href="https://juhlaboxi.github.io#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="https://juhlaboxi.github.io#Tilaa" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TILAA</a>
-    <a href="https://juhlaboxi.github.io#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
-    <a href="https://juhlaboxi.github.io#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+    <a href="#home" class="w3-bar-item w3-button">juhlaboxi</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
+    <a href="#Tilaa" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TILAA</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
     </a>
   </div>
 
   <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+  <div id="navDemo" class="w3-bar-block w3-black w3-text-green w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
     <a href="#Tilaa" class="w3-bar-item w3-button" onclick="toggleFunction()">TILAA</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">OTA YHTEYTTÄ</a>
@@ -101,7 +103,7 @@ body, html {
 <body>
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-black w3-wide">TILAA</span>
+    <span class="w3-xxlarge w3-text-white w3-wide w3-green">TILAA</span>
   </div>
 </div>
 <!-- Container (Portfolio Section) -->
@@ -148,20 +150,40 @@ body, html {
   </div>
 </div>
 <!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+<div id="modal01" class="w3-modal w3-black" >
+  <span class="w3-button w3-large w3-black w3-display-topright w3" title="Close Modal Image" onclick="hideb();"><i class="fa fa-remove"></i></span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-0">
-    <div style="background:white;width: 100%; height:100%;">
+    <div style="background:black;width: 100%; height:100%; border: dotted 2px #4caf50;">
+	<h1 id="caption" class="w3-large w3-text-white"></h1>
 	<div class="row">
 		<div class="column">
-			<h3 style="color:black;"> Sisältää </h3>
+			<h3 class="w3-green"> Sisältää </h3>
+			<ul class="w3-ul w3-green">
+			    <li >
+					<button class="accordion">▼ Ruokatarvikkeita</button>
+					<div class="panel">
+  					<p>Lorem ipsum...</p>
+					</div>
+			    </li>
+			    <li>
+					<button class="accordion">▼ Kuusitarvikeet</button>
+					<div class="panel">
+  					<p>Lorem ipsum...</p>
+					</div>
+			    </li>
+			    <li>
+					<button class="accordion">▼ ???</button>
+					<div class="panel">
+  					<p>Lorem ipsum...</p>
+					</div>
+			    </li>
+			</ul>
 		</div>
-		<p id="caption" class="w3-opacity w3-large" style="color: black;"></p>
 		<div class="column">
     			<img id="img01" style="width:100%;height:100%"></img>
 		</div>
 		<div class="column">
-			<button> Tilaa </button>
+			<button class="w3-button w3-red"> Lisää koriin! </button>
 		</div>
 	</div>
     </div>
@@ -199,9 +221,9 @@ window.onscroll = function() {myFunction()};
 function myFunction() {
     var navbar = document.getElementById("myNavbar");
     if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
+        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black" + " w3-text-green";
     } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
+        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-black w3-text-green", "");
     }
 }
 
@@ -214,4 +236,37 @@ function toggleFunction() {
         x.className = x.className.replace(" w3-show", "");
     }
 }
+//Hide
+function hideb() {
+    document.getElementById("modal01").style.display = "none";
+}
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+
+//accordion effects
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    /* Toggle between adding and removing the "active" class,
+    to highlight the button that controls the panel */
+    this.classList.toggle("active");
+
+    /* Toggle between hiding and showing the active panel */
+    var panel = this.nextElementSibling;
+    if (panel.style.display === "block") {
+      panel.style.display = "none";
+    } else {
+      panel.style.display = "block";
+    }
+  });
+} 
 </script>
