--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ body, html {
     min-height: 400px;
   }
 }
+.strokeme {
+  color: white;
+  text-shadow: 1px 1px 0 #000, 1px 1px 0 #000, 1px 1px 0 #000, 1px 1px 0 #000;
+}
 </style>
 <body>
 
@@ -82,7 +86,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-xxxlarge w3-text-black w3-red w3-wide"><strong>juhlaboxi </strong><span class="w3-hide-small"> </span> </span>
+    <span class="w3-xxxlarge w3-text-white strokeme w3-wide" style>juhlaboxi <span class="w3-hide-small"> </span> </span>
 	<br \>
 	<span class="w3-center w3-padding-small w3-black w3-large w3-narrow w3-animate-opacity w3-text-white">kun haluat vain hyvää juhlatunnelmaa. <span class="w3-hide-large"><br \></span>Ilman sähläystä.</span>
   </div>
