made stuff more scalable

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ body, html {
       <img src="boxiA.png" style="filter:hue-rotate(180deg);" onclick="window.open('tilaa.html?p=4')" class="w3-hover-opacity tilaa wowimg" alt="boxi D">
     </div>
   </div>
-
+  <div class="w3-hide-small" id="isSmall"> </div>
   <div class="w3-row-padding w3-center w3-section w3-hide-small">
     <div class="w3-col m3">
       <img src="boxiA.png" onclick="onClick(this)" class="w3-hover-opacity tilaa" alt="boxi A">
@@ -299,6 +299,9 @@ function toggleFunction() {
         x.className = x.className.replace(" w3-show", "");
     }
 }
+function isHidden(el) {
+    return (el.offsetParent === null)
+}
 //Add subtitles
 var acc2 = document.getElementsByClassName("wowimg");
 var i2;
@@ -310,6 +313,29 @@ for (i2 = 0; i2 < acc2.length; i2++) {
   newText.appendChild(node);
   acc2[i2].parentNode.insertBefore( newText, acc2[i2].nextSibling );
 } 
+function resiz(){
+  var iss = document.getElementById("isSmall");
+  var acc2 = document.getElementsByClassName("wowimg");
+  var i2;
+  var scal = 100;
+  if(isHidden(iss)){
+    console.log("hidden");
+    scal = 30;
+    
+  }
+  else{
+    console.log("not hidden");
+    scal = 100;
+  }
+  for (i2 = 0; i2 < acc2.length; i2++) {
+    acc2[i2].style.width = scal + "%";
+    acc2[i2].style.height = scal + "%";
+  } 
+}
+window.addEventListener('resize', function(event){
+  resiz();
+});
+resiz();
 </script>
 
 </body>
