--- a/tilaa.html
+++ b/tilaa.html
@@ -113,7 +113,7 @@ body, html {
 <br \>
 
 <body>
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-2 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide w3-green">TILAA</span>
   </div>
