--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body, html {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
+  .bgimg-3 {
     background-attachment: scroll;
     min-height: 400px;
   }
