--- a/tilaa.html
+++ b/tilaa.html
@@ -33,7 +33,7 @@ body, html {
 /* Second image (Portfolio) */
 .bgimg-2 {
   background-image: url("xmas.jpeg");
-  min-height: 400px;
+  min-height: 85%;
 }
 
 /* Third image (Contact) */
@@ -116,6 +116,10 @@ body, html {
 <div class="bgimg-2 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide w3-green">TILAA</span>
+  </div>
+  <div class="w3-display-bottommiddle w3-center">
+    <span class="w3-large w3-text-white w3-black w3-hide-small">Katso Vaihdoehdot</span>
+    <span class="w3-xlarge w3-wide w3-text-white"><br \>▼</span>
   </div>
 </div>
 <!-- Container (Portfolio Section) -->
