--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-white w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button">juhlaboxi</a>
+    <a href="#home" class="w3-bar-item w3-button w3-green w3-text-black">juhlaboxi</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#Tilaa" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TILAA</a>
+    <a href="tilaa.html" class="w3-bar-item w3-button w3-hide-small w3-text-red"><i class="fa fa-th"></i> TILAA</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
       <i class="fa fa-search"></i>
@@ -83,7 +83,7 @@ body, html {
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-black w3-text-green w3-hide w3-hide-large w3-hide-medium">
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#Tilaa" class="w3-bar-item w3-button" onclick="toggleFunction()">TILAA</a>
+    <a href="tilaa.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TILAA</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">OTA YHTEYTTÄ</a>
     <a href="#" class="w3-bar-item w3-button">HAKU</a>
   </div>
@@ -95,6 +95,10 @@ body, html {
     <span class="w3-xxxlarge w3-text-white strokeme w3-wide" style>juhlaboxi <span class="w3-hide-small"> </span> </span>
 	<br \>
 	<span class="w3-center w3-padding-small w3-black w3-large w3-narrow w3-animate-opacity w3-text-white">Kun haluat vain hyvää juhlatunnelmaa,  <span class="w3-hide-large"><br \></span>ilman sähläystä.</span>
+  </div>
+  <div class="w3-display-bottommiddle w3-center">
+    <span class="w3-large w3-text-white w3-black w3-hide-small">Lue lisää</span>
+    <span class="w3-xlarge w3-wide w3-text-white"><br \>▼</span>
   </div>
 </div>
 
@@ -166,10 +170,10 @@ body, html {
   <p class="w3-center"><em>Tässä on joitakin valmiita boxejamme.<br> Klikkaa boxin kuvasta saadaksesi tietää lisää!</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <button class="w3-center w3-button w3-green w3-block" onclick="window.open('tilaa.html');">Katso kaikki vaihtoehdot <span class="w3-hide-large"><br \></span>tai koko omasi painamalla tästä!</button>
+  <button class="w3-center w3-button w3-green w3-block" onclick="window.open('tilaa.html');">Katso kaikki vaihtoehdot <span class="w3-hide-large"><br \></span>tai kokoa omasi painamalla tästä!</button>
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="boxiA.png" style="filter:hue-rotate(0deg);" onclick="window.open('tilaa.html?p=1')" class="w3-hover-opacity tilaa wowimg" alt="boxi A">
+      <img src="oma.png" style="filter:hue-rotate(0deg);" onclick="window.open('tilaa.html?p=1')" class="w3-hover-opacity tilaa wowimg" alt="Kokoa omasi">
     </div>
 
     <div class="w3-col m3">
