--- a/tilaa.html
+++ b/tilaa.html
@@ -93,7 +93,7 @@ body, html {
     </a>
     <a href="index.html#home" class="w3-bar-item w3-button">juhlaboxi</a>
     <a href="index.html#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="index.html#Tilaa" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TILAA</a>
+    <a href="index.html#Tilaa" class="w3-bar-item w3-button w3-hide-small w3-red w3-text-black"><i class="fa fa-th"></i> TILAA</a>
     <a href="index.html#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> OTA YHTEYTTÄ</a>
     <a class="w3-bar-item w3-button w3-right w3-hover-red" onclick="showCart();">
       <i class="fa fa-shopping-cart"><p id="car">(0)</p></i>
@@ -131,7 +131,7 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="boxiA.png" style="width:100%;filter:hue-rotate(0deg);" onclick="onClick(this)" class="w3-hover-opacity wowimg" alt="boxi A" id="nu1">
+      <img src="oma.png" style="width:100%;filter:hue-rotate(0deg);" onclick="onClick(this)" class="w3-hover-opacity wowimg" alt="Kokoa Omasi!" id="nu1">
     </div>
 
     <div class="w3-col m3">
@@ -183,22 +183,22 @@ body, html {
 			</p>
 		</div>
 		<div class="column">
-			<h3 class="w3-green"> Sisältää </h3>
+			<h3 class=""> Sisältää </h3>
 			<ul class="w3-ul w3-green">
 			    <li >
-					<button class="accordion">▼ Ruokatarvikkeita</button>
+					<button class="accordion">Ruokatarvikkeita ▼</button>
 					<div class="panel">
   					<p>Lorem ipsum...</p>
 					</div>
 			    </li>
 			    <li>
-					<button class="accordion">▼ Kuusitarvikeet</button>
+					<button class="accordion">Kuusitarvikeet ▼</button>
 					<div class="panel">
   					<p>Lorem ipsum...</p>
 					</div>
 			    </li>
 			    <li>
-					<button class="accordion">▼ ???</button>
+					<button class="accordion">??? ▼</button>
 					<div class="panel">
   					<p>Lorem ipsum...</p>
 					</div>
@@ -415,7 +415,7 @@ function resiz(){
   var scal = 100;
   if(isHidden(iss)){
     console.log("hidden");
-    scal = 30;
+    scal = 50;
     
   }
   else{
